@@ -30,6 +30,7 @@ Cacti CHANGELOG
 -bug: Make load average script compatible with Mac OS X systems.
 -bug: Correct an issue where under certain circumstances, |query_ifSize| was being implemented as the maximum value for an rrd
 -bug: Correct issue where dhtml caching was not working with expand hosts enabled
+-bug: Add snmp retries to cacti's snmp functions
 
 0.8.6h
 -bug#0000383: Add more verbose RRDtool debug output from Graph Management.
